// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Component
  style={
    Object {
      "flexDirection": "row",
      "height": 47,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCorrect={false}
    onChangeText={[Function]}
    placeholder={null}
    style={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "backgroundColor": "#e8edf1",
          "borderRadius": 6,
          "color": "#171b1e",
          "flex": 1,
          "padding": 10,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
</Component>
`;

exports[`renders with default value 1`] = `
<Component
  style={
    Object {
      "flexDirection": "row",
      "height": 47,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCorrect={false}
    defaultValue="Default value"
    onChangeText={[Function]}
    placeholder={null}
    style={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "backgroundColor": "#e8edf1",
          "borderRadius": 6,
          "color": "#171b1e",
          "flex": 1,
          "padding": 10,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
</Component>
`;

exports[`renders with placeholder 1`] = `
<Component
  style={
    Object {
      "flexDirection": "row",
      "height": 47,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCorrect={false}
    onChangeText={[Function]}
    placeholder={null}
    style={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "backgroundColor": "#e8edf1",
          "borderRadius": 6,
          "color": "#171b1e",
          "flex": 1,
          "padding": 10,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
  <Text
    pointerEvents="none"
    style={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "#7f91a8",
          "padding": 10,
          "paddingVertical": 15,
          "position": "absolute",
        },
      ]
    }
  >
    <Translation
      passThrough="Placeholder"
    />
  </Text>
</Component>
`;
